[gd_scene load_steps=20 format=2]

[ext_resource path="res://Players/Player4.gd" type="Script" id=1]
[ext_resource path="res://Players/p4.gltf" type="PackedScene" id=2]
[ext_resource path="res://Players/p4trashhold1.gltf" type="PackedScene" id=3]
[ext_resource path="res://Players/p4metcon.gltf" type="PackedScene" id=4]
[ext_resource path="res://Players/p4plascon.gltf" type="PackedScene" id=5]
[ext_resource path="res://Players/p4rubcon.gltf" type="PackedScene" id=6]
[ext_resource path="res://Players/p3trashhold4.gltf" type="PackedScene" id=7]
[ext_resource path="res://PlayerAnims/p4grab.gltf" type="PackedScene" id=8]
[ext_resource path="res://PlayerAnims/p4TrashHoldGrab.gltf" type="PackedScene" id=9]
[ext_resource path="res://PlayerAnims/p4SegGrab.gltf" type="PackedScene" id=10]
[ext_resource path="res://PlayerAnims/p4dizzy.gltf" type="PackedScene" id=11]
[ext_resource path="res://PlayerAnims/p4TrashDizzy.gltf" type="PackedScene" id=12]
[ext_resource path="res://PlayerAnims/p4SegHoldDizzy.gltf" type="PackedScene" id=13]
[ext_resource path="res://PlayerAnims/p4PlasConDizzy.gltf" type="PackedScene" id=14]
[ext_resource path="res://PlayerAnims/p4MetConDizzy.gltf" type="PackedScene" id=15]
[ext_resource path="res://PlayerAnims/p4RubConDizzy.gltf" type="PackedScene" id=16]
[ext_resource path="res://Players/p4animTimer.gd" type="Script" id=17]
[ext_resource path="res://Players/p4HazardTimer.gd" type="Script" id=18]

[sub_resource type="BoxShape" id=1]

[node name="Player4" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.3, 0, 0, 0, 0.2, 0, 0.0862186, 0 )
shape = SubResource( 1 )

[node name="PickUp" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -50, 0, 1, -2.18557e-006, -0.000127792, 0.118495, 0.231726 )
enabled = true
cast_to = Vector3( 0, 0, 0.2 )
collide_with_areas = true

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.232548 )
light_energy = 0.1

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200043, 0, -0.0105059 )
light_energy = 0.1

[node name="OmniLight3" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.112074, 0, -0.214588 )
light_energy = 0.1

[node name="OmniLight4" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.291408, 0, 0.0223494 )
light_energy = 0.1

[node name="OmniLight5" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0370018, 0.239997, 0.0223494 )
light_energy = 0.1

[node name="NoHold" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )

[node name="GarbageHold" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.19, 0, 0, 0, 0.19, 0, 0, 0, 0.19, 0, 0, -0.00885522 )
visible = false

[node name="MetalHold" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.19, 0, 0, 0, 0.19, 0, 0, 0, 0.19, 0, 0, 0.118475 )
visible = false

[node name="PlasticHold" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.19, 0, 0, 0, 0.19, 0, 0, 0, 0.19, 0, 0, 0.181253 )
visible = false

[node name="RubberHold" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.19, 0, 0, 0, 0.19, 0, 0, 0, 0.19, 0, 0, 0.175269 )
visible = false

[node name="segHold" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.19, 0, 0, 0, 0.19, 0, 0, 0, 0.19, 3.34382e-005, -0.00180721, -0.0183594 )
visible = false

[node name="noHoldGrab" parent="." instance=ExtResource( 8 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, -0.00873613, -0.00430846 )
visible = false

[node name="trashHoldGrab" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false

[node name="segTrashHoldGrab" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false

[node name="dizzyNoHold" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false

[node name="dizzyTrashHold" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, -0.00518799, -0.0111708 )
visible = false

[node name="dizzySegTrashHold" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, -0.00923765 )
visible = false

[node name="dizzyPlasticHold" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.00346696, -0.0140619, 0.189236 )
visible = false

[node name="dizzyMetalHold" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.00899577, -0.0130439, 0.114661 )
visible = false

[node name="dizzyRubberHold" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, -0.00679874, 0.182667 )
visible = false

[node name="p4animTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 17 )

[node name="p4HazardTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 18 )
[connection signal="dizzyAnimPlay" from="." to="p4HazardTimer" method="_on_Player4_dizzyAnimPlay"]
[connection signal="p4animTimerStart" from="." to="p4animTimer" method="_on_Player4_p4animTimerStart"]
[connection signal="timeout" from="p4animTimer" to="." method="_on_p4animTimer_timeout"]
[connection signal="timeout" from="p4HazardTimer" to="." method="_on_p4HazardTimer_timeout"]
